# fastapi-uv-pro-starter

./: .env.example  README.md  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py
app/core/: config.py
app/models/: base.py
app/schemas/: health.py
